--- a/General/2 - Ejercicios/3_SPI_PRU_Nuestro_para_ADS1198/pru_spi_ads/dev_tree_pru_spi/EBB-PRU-ADC.dts
+++ b/General/2 - Ejercicios/3_SPI_PRU_Nuestro_para_ADS1198/pru_spi_ads/dev_tree_pru_spi/EBB-PRU-ADC.dts
@@ -26,12 +26,16 @@
          pru_pru_pins: pinmux_pru_pru_pins {   // The PRU pin modes
             pinctrl-single,pins = <
 	       // See Table 6-7, no pull up/down resistors enabled
+				0x184 0x2e  // DATA_READY P9_24 pr1_pru0_pru_r31_16, MODE6 | INPUT  | DIS  00101110=0x2e
+				0x1ac 0x0d  // START   P9_25 pr1_pru0_pru_r30_7, MODE5 | OUTPUT | DIS  00001101=0x0d
+				0x190 0x0d  // RESET   P9_31 pr1_pru0_pru_r30_0, MODE5 | OUTPUT | DIS  00001101=0x0d
+
                0x1a4 0x0d  // CS   P9_27 pr1_pru0_pru_r30_5, MODE5 | OUTPUT | DIS  00001101=0x0d
                0x19c 0x2e  // MISO P9_28 pr1_pru0_pru_r31_3, MODE6 | INPUT  | DIS  00101110=0x2e
                0x194 0x0d  // MOSI P9_29 pr1_pru0_pru_r30_1, MODE5 | OUTPUT | DIS  00001101=0x0d
                0x198 0x0d  // CLK  P9_30 pr1_pru0_pru_r30_2, MODE5 | OUTPUT | DIS  00001101=0x0d
 	       // This is for PRU1, the sample clock -- debug only
-               0x0a4 0x0d  // SAMP P8_46 pr1_pru1_pru_r30_1, MODE5 | OUTPUT | DIS  00001101=0x0d
+				0x0a4 0x0d  // SAMP P8_46 pr1_pru1_pru_r30_1, MODE5 | OUTPUT | DIS  00001101=0x0d
             >;
          };
       };
